<resources>
    <string name="app_name">Savings</string>
    <string name="magic_number">Magic % number</string>
    <string name="length_of_your_patience">Length of your patience</string>
    <string name="money_you_give_them">Money you give Them</string>
    <string name="button">Tell me</string>
    <string name="about">
        Author: Pavlína Smolkova\n
        Login: SMO0117\n
        Version: 1.1\n
    </string>
    <string name="historyText">History:</string>
    <string name="settingsText">Settings</string>
    <string name="clear">Clear</string>
    <string name="piechart">PieChart</string>
    <string name="barchart">Barchart</string>
</resources>